[gd_scene load_steps=4 format=3 uid="uid://5niokgxkm0bj"]

[ext_resource type="Script" path="res://source/scripts/LevelEndRoomKey.gd" id="1_8j42q"]
[ext_resource type="Texture2D" uid="uid://u2fqouhy8wyp" path="res://assets/sprites/captives_room_key.png" id="2_uynuy"]
[ext_resource type="Texture2D" uid="uid://c26r2yu856mi1" path="res://assets/sprites/LightTexture.png" id="3_egyt1"]

[node name="LevelEndRoomKey" type="Area2D" groups=["LevelEndDoorKey"]]
collision_layer = 8
script = ExtResource("1_8j42q")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_uynuy")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1.52588e-05, 0)
scale = Vector2(0.4, 0.4)
polygon = PackedVector2Array(-6, -18, -6, -15.5, -2.9, -10, 61, -10, 61, 9, 60.4, 9, 57, 9.7, 57, 18.8, 53.8, 22, 47.3, 22, 38, 15, 38, 10, -2.3, 10, -6.8, 19, -8.1, 19, -18, 28, -47.7, 28, -54, 25.3, -54, 23.7, -61, 15.1, -61, -15.4, -53, -26, -50.7, -26, -48, -28, -19, -28)

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.2
texture = ExtResource("3_egyt1")
texture_scale = 0.1

[node name="LevelEndDoorKey" type="Label" parent="."]
visible = false
offset_left = -73.0
offset_top = -69.0
offset_right = 77.0
offset_bottom = -20.0
text = "(End Room Key)"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
